--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,14 @@
     box-sizing: border-box;
   }
 
+hr {
+  margin: 15px auto 25px;
+  padding: 0;
+  max-width: 250px;
+  border: 0;
+  border-top: solid 4px;
+}
+
   body {
     margin: 0;
     font-family: "Hiragino Kaku Gothic ProN";
@@ -23,7 +31,7 @@
   header {
     height: 65px;
     width: 100%;
-    background-color: rgba(239, 168, 248, 0.932);
+    background-color: rgb(197, 19, 54);
     position :fixed;
     top: 0;
     z-index: 10;
@@ -31,14 +39,14 @@
 
 
 #top {
-    background-image: url("https://cdn.pixabay.com/photo/2020/02/06/19/28/cherry-blossoms-4825302_960_720.jpg");
-    padding: 300px 0 300px 0;
-    background-size: cover;
-    color: white;
-    opacity: 50%;
-    text-align: center;
+  background-color: rgb(223, 70, 100);
+  padding: 10rem 0 6rem;
+  background-size: cover;
+  color: white;
+  text-align: center;
     
 }
+
 .container h1 {
     font-size: 45px;
     text-shadow: rgba(117, 230, 250, 0.76);
@@ -63,31 +71,13 @@
     padding-top: 100px;
   }
 
-/*-------  Start of stack  --------*/
+/*-------  Start of project  --------*/
 
-  #stack {
-    height: 500px;
-    text-align: center;
-  }
-
-  .example {
-    float: left;
-    width: 20%;
-  }
-
-  .example-img {
-    position: relative;
-  }
-
-  .example p {
-    position: absolute;
-    top: 90px;
-    width: 100%;
-    color: #fff;
-  }
-
-
-/*-------  End of stack  --------*/
+.points {
+  display: flex;
+  justify-content:space-evenly;
+  align-content: center;
+}
 
 
 
@@ -226,3 +216,13 @@
   }
 
 /*-------  End of contact  --------*/
+
+footer {
+  text-align: center;
+  margin: 2rem 0;
+}
+
+i {
+  padding: 1rem 2rem;
+
+}
