modified img size

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -141,6 +141,10 @@ hr {
   width: 500px;
 }
 
+.slide-area img {
+  width: 70rem;
+}
+
 /*-------  End of project  --------*/
 
 /*-------  Start of contact  --------*/
