--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,8 @@
 * {
     box-sizing: border-box;
     text-decoration: none;
+    padding: 0px;
+    margin: 0px;
   }
 
 hr {
@@ -100,50 +102,22 @@ hr {
   padding-bottom: 100px;
 }
 
-.project img {
-  width: 500px;
+.slide_box {
+  width:60%;
+  margin: auto;
+  border: 1px solid rgba(224, 223, 223, 0.781);
+  overflow: hidden;
 }
 
-.project p {
-  display: none;
-}
-
-.project p:hover {
+.slide_list {
   display: flex;
+  width: 100%;
+  height: 430px;
 }
 
-
-.slide-wrapper {
-  text-align: center;
-  width: 1000px;
-  margin: 0 auto;
-  color: #5e6f84;
-  padding: 60px 0;
-}
-
-.slides {
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.slide {
-  display: none;
-  
-}
-
-.active {
-  display: block;
-  
-}
-
-.slide img {
-  width: 500px;
-}
-
-.slide-area img {
-  width: 60rem;
+.slide_btn_box {
+  margin: auto;
+  padding-bottom: 10%;
 }
 
 /*-------  End of project  --------*/
