update submit btn

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -141,82 +141,88 @@ hr {
   padding-top: 1rem;
   padding-bottom: 2rem;
 }
-  #contact {
-    background-color: rgb(253, 224, 230);
-    padding-top: 20px;
-    padding-bottom: 50px;
-    display: block;
-  }
-  .contact-form input[type="text"], .contact-form input[type="email"], .contact-form textarea {
-    margin: 0;
-    padding: 0 10px;
-    vertical-align: middle;
-    background: rgba(0, 0, 0, 0.08);
-    border: none;
-    width: 85%;
-    color: #202020;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-    font-weight: 300;
-    border-radius: 0;
-    box-shadow: none;
-    transition: all .3s;
-    margin-bottom: 10px;
-    padding: 15px;
-  }
-  
-  textarea {
-    height: 150px;
-  }
-  
-  .contact-form {
-    display: inline-block;
-    vertical-align: top;
-    width: 58%;
-  }
-  
-  .btn-contact {
-    font-family: 'Dosis', sans-serif;
-    font-size: 18px;
-    font-weight: 600;
-    background: #5983ff;
-    border: 1px solid #5979ff;
-    color: white;
-    box-shadow: inset 0 1px 0 #5867ed;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-    transition: all .3s;
-    margin: 10px 0;
-    padding: 15px 35px;
-  }
-  
-  #btn_send {
-    margin: 1rem;
-    padding: 0.5rem;
-    width: 20%;
-    background-color: rgb(223, 70, 100, 0.6);
-    color: white;
-  }
+#contact {
+  background-color: rgb(253, 224, 230);
+  padding-top: 20px;
+  padding-bottom: 50px;
+  display: block;
+}
+.contact-form input[type="text"], .contact-form input[type="email"], .contact-form textarea {
+  margin: 0;
+  padding: 0 10px;
+  vertical-align: middle;
+  background: rgba(0, 0, 0, 0.08);
+  border: none;
+  width: 85%;
+  color: #202020;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  border-radius: 0;
+  box-shadow: none;
+  transition: all .3s;
+  margin-bottom: 10px;
+  padding: 15px;
+}
 
-  .contact-about {
-    display: inline-block;
-    vertical-align: top;
-    width: 40%;
-  }
-  
-  .contact-about i {
-    padding-right: 15px;
-    font-size: 18px;
-  }
-  
-  .contact-about p {
-    margin: 0 0 24px;
-    line-height: 24px;
-  }
-  
-  .error-message {
-    color: #F51414;
-    height: 20px;
-  }
+textarea {
+  height: 150px;
+}
+
+.contact-form {
+  display: inline-block;
+  vertical-align: top;
+  width: 58%;
+}
+
+.btn-contact {
+  font-family: 'Dosis', sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+  background: #5983ff;
+  border: 1px solid #5979ff;
+  color: white;
+  box-shadow: inset 0 1px 0 #5867ed;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+  transition: all .3s;
+  margin: 10px 0;
+  padding: 15px 35px;
+}
+
+#btn_send {
+  margin: 1rem;
+  padding: 0.5rem;
+  width: 20%;
+  background-color: rgb(223, 70, 100, 0.6);
+  color: white;
+  border: white;
+}
+
+#btn_send:hover {
+  background-color: white;
+  color:rgb(223, 70, 100);
+}
+
+.contact-about {
+  display: inline-block;
+  vertical-align: top;
+  width: 40%;
+}
+
+.contact-about i {
+  padding-right: 15px;
+  font-size: 18px;
+}
+
+.contact-about p {
+  margin: 0 0 24px;
+  line-height: 24px;
+}
+
+.error-message {
+  color: #F51414;
+  height: 20px;
+}
 
 /*-------  End of contact  --------*/
 
