--- a/stylesheet.css
+++ b/stylesheet.css
@@ -117,19 +117,23 @@ hr {
   padding-bottom: 100px;
 }
 
+.slide_wrap {
+  overflow: hidden;
+}
+
 .slide_box {
-  width:60%;
-  margin: auto;
-  border: 1px solid rgba(224, 223, 223, 0.781);
-  /* overflow: hidden; */
+  width: 100vw;
+  transition: transform 0.5s;
 }
 
 .slide_list {
-  display: flex;
-  width: 100%;
-  height: 430px;
+  width:60vw;
+  float: left;
 }
 
+.slide_list img {
+  width: 100%;
+}
 .slide_btn_box {
   margin: auto;
   padding-top: 2rem;
@@ -138,6 +142,7 @@ hr {
 }
 
 .btn {
+  transform: translate(-60vw)
   background-color: white;
   border: transparent;
   margin: 0 5rem;
